[gd_scene load_steps=19 format=2]

[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://FBX Files - Jan 25/CombatantAnim.tscn" type="PackedScene" id=2]
[ext_resource path="res://CombatantsFolder/Combatant.gd" type="Script" id=3]
[ext_resource path="res://FBX Files - Jan 25/Walking.anim" type="Animation" id=4]
[ext_resource path="res://FBX Files - Jan 25/FightingIdle.anim" type="Animation" id=5]
[ext_resource path="res://FBX Files - Jan 25/HighKick.anim" type="Animation" id=6]
[ext_resource path="res://FBX Files - Jan 25/Kicking.anim" type="Animation" id=7]
[ext_resource path="res://FBX Files - Jan 25/LowKick.anim" type="Animation" id=8]
[ext_resource path="res://FBX Files - Jan 25/Punching.anim" type="Animation" id=9]
[ext_resource path="res://FBX Files - Jan 25/HighJab.anim" type="Animation" id=10]
[ext_resource path="res://FBX Files - Jan 25/WalkBack.anim" type="Animation" id=11]
[ext_resource path="res://Hitboxes and Hurtboxes/Blockbox.tscn" type="PackedScene" id=12]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 6, 2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.50144, 1, 3.18964 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2, 2, 3.32192 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 3, 1, 4 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2.64393, 1.96829, 6.84278 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1, 8.53526, 8.7833 )

[node name="Combatant" type="KinematicBody"]
collision_layer = 0
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CombatantAnim")
autoplay = "FightingIdle"
anims/FightingIdle = ExtResource( 5 )
anims/HighJab = ExtResource( 10 )
anims/HighKick = ExtResource( 6 )
anims/Kicking = ExtResource( 7 )
anims/LowKick = ExtResource( 8 )
anims/Punching = ExtResource( 9 )
anims/WalkBack = ExtResource( 11 )
anims/Walking = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0 )
visible = false
shape = SubResource( 1 )

[node name="CombatantAnim" parent="." instance=ExtResource( 2 )]

[node name="Skeleton" parent="CombatantAnim/AuxScene 2/Node" index="0"]
bones/10/bound_children = [ NodePath("BoneAttachment") ]
bones/16/bound_children = [ NodePath("BoneAttachment 2") ]
bones/22/bound_children = [ NodePath("BoneAttachment 3") ]
bones/28/bound_children = [ NodePath("BoneAttachment 4") ]
bones/34/bound_children = [ NodePath("BoneAttachment 5") ]
bones/43/bound_children = [ NodePath("BoneAttachment 6"), NodePath("BoneAttachment 7"), NodePath("BoneAttachment 8") ]
bones/52/bound_children = [ NodePath("BoneAttachment 9") ]
bones/58/bound_children = [ NodePath("BoneAttachment 10") ]
bones/64/bound_children = [ NodePath("BoneAttachment 11") ]
bones/70/bound_children = [ NodePath("BoneAttachment 12") ]
bones/76/bound_children = [ NodePath("BoneAttachment 13") ]
bones/90/bound_children = [ NodePath("BoneAttachment 14") ]
bones/98/bound_children = [ NodePath("BoneAttachment 15") ]

[node name="BoneAttachment" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="0"]
transform = Transform( 0.96342, 0.26041, -0.063308, 0.239256, -0.729336, 0.640956, 0.120738, -0.632657, -0.764962, -9.15198, 134.656, 44.7185 )

[node name="BoneAttachment 2" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="1"]
transform = Transform( 0.96342, 0.26041, -0.063308, 0.239256, -0.729336, 0.640957, 0.120738, -0.632658, -0.764962, -9.41316, 132.345, 45.4254 )

[node name="BoneAttachment 3" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="2"]
transform = Transform( 0.0540535, -0.288532, -0.955943, -0.0263884, 0.956596, -0.290221, 0.998189, 0.0409132, 0.0440939, -11.7008, 136.01, 41.9695 )

[node name="BoneAttachment 4" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="3"]
transform = Transform( 0.96342, 0.26041, -0.063308, 0.239256, -0.729336, 0.640957, 0.120738, -0.632657, -0.764962, -9.85927, 137.369, 41.6149 )

[node name="BoneAttachment 5" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="4"]
transform = Transform( 0.96342, 0.260409, -0.0633077, 0.239255, -0.729336, 0.640957, 0.120738, -0.632657, -0.764962, -9.81284, 135.955, 43.4832 )

[node name="BoneAttachment 6" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="5"]
transform = Transform( 0.981509, -0.144814, -0.125178, 0.08043, 0.905428, -0.416809, 0.173699, 0.399034, 0.900333, -1.52978, 157.207, 1.94224 )

[node name="BoneAttachment 7" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="6"]
transform = Transform( 0.981509, -0.144814, -0.125178, 0.08043, 0.905428, -0.416809, 0.173699, 0.399034, 0.900333, -1.52978, 157.207, 1.94224 )

[node name="BoneAttachment 8" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="7"]
transform = Transform( 0.981509, -0.144814, -0.125178, 0.08043, 0.905428, -0.416809, 0.173699, 0.399034, 0.900333, -1.52978, 157.207, 1.94224 )

[node name="BoneAttachment 9" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="8"]
transform = Transform( 0.660851, 0.463082, 0.59062, 0.3592, -0.88612, 0.292858, 0.658977, 0.0186152, -0.751932, -18.524, 151.829, 21.9155 )

[node name="BoneAttachment 10" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="9"]
transform = Transform( 0.66085, 0.463081, 0.59062, 0.3592, -0.88612, 0.292858, 0.658977, 0.018615, -0.751932, -18.4283, 153.228, 20.2242 )

[node name="BoneAttachment 11" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="10"]
transform = Transform( 0.660872, 0.463081, 0.590596, 0.359211, -0.88612, 0.292846, 0.658951, 0.018615, -0.751956, -17.1722, 154.144, 19.1346 )

[node name="BoneAttachment 12" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="11"]
transform = Transform( 0.660851, 0.463081, 0.590619, 0.3592, -0.88612, 0.292858, 0.658977, 0.0186149, -0.751932, -15.8162, 154.681, 17.3007 )

[node name="BoneAttachment 13" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="12"]
transform = Transform( 0.74701, 0.203176, 0.633005, -0.18515, 0.978065, -0.0954345, -0.638511, -0.0459107, 0.768242, -14.9868, 154.946, 19.3132 )

[node name="BoneAttachment 14" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="13"]
transform = Transform( 0.642499, -0.033236, -0.765565, -2.99769e-08, 0.999059, -0.0433729, 0.766286, 0.027867, 0.641895, 3.1857, 0.403287, 27.1446 )

[node name="BoneAttachment 15" parent="CombatantAnim/AuxScene 2/Node/Skeleton" index="14"]
transform = Transform( 0.143247, -0.0287258, -0.98927, 6.76839e-06, 0.999578, -0.0290243, 0.989687, 0.00415083, 0.143187, -7.04771, 0.270118, -23.9876 )

[node name="HighPunchHitbox" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.0926, 5.34073 )
visible = false
collision_mask = 2147483660
damage = 4
horHit = 2

[node name="CollisionShape" parent="HighPunchHitbox" index="0"]
shape = SubResource( 2 )
disabled = true

[node name="LowPunchHitbox" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.259, 5.45366 )
visible = false
collision_mask = 2147483660
damage = 2
horHit = 1

[node name="CollisionShape" parent="LowPunchHitbox" index="0"]
shape = SubResource( 3 )
disabled = true

[node name="HighKickHitbox" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.1806, 5.46374 )
visible = false
collision_mask = 2147483660
damage = 10
horHit = 1
verHit = 4

[node name="CollisionShape" parent="HighKickHitbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.580393, 0 )
shape = SubResource( 4 )
disabled = true

[node name="LowKickHitbox" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.32446, 3.08099 )
visible = false
collision_mask = 2147483660
damage = 5
horHit = 4

[node name="CollisionShape" parent="LowKickHitbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.580393, 1.75042 )
shape = SubResource( 5 )
disabled = true

[node name="Blockbox" parent="." instance=ExtResource( 12 )]

[node name="BlockCollisionShape" parent="Blockbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.3512, 6.7496 )
shape = SubResource( 6 )
disabled = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HighPunchHitbox" to="." method="_on_HighPunchHitbox_area_entered"]
[connection signal="area_entered" from="LowPunchHitbox" to="." method="_on_LowPunchHitbox_area_entered"]
[connection signal="area_entered" from="HighKickHitbox" to="." method="_on_HighKickHitbox_area_entered"]
[connection signal="area_entered" from="LowKickHitbox" to="." method="_on_LowKickHitbox_area_entered"]

[editable path="CombatantAnim"]

[editable path="HighPunchHitbox"]

[editable path="LowPunchHitbox"]

[editable path="HighKickHitbox"]

[editable path="LowKickHitbox"]

[editable path="Blockbox"]
